# ACS

./: .gitignore  EKF_sfun.mexw64  README.md  acsv3.ino  imu_noise.mat  scr_EKF.m  sim_EKF.slx  starshot_ACS_setup.asv  starshot_ACS_setup.m  starshot_sim.slx  starshot_sim.slx.r2017a  starshot_sim.slxc  starshotsim_dev.slx  starshotsim_dev.slx.autosave  starshotsim_dev.slxc  starshotsim_dev_sfun.mexw64  starshotsimv5.slx  starshotsimv5.slx.autosave  starshotsimv5.slxc
ACS Hardware Test/: platformio.ini
ACS Hardware Test/src/: main.cpp
ACS_Sim0/: platformio.ini
ACS_Sim0/src/: main.cpp
Arduino Libraries caa03Jul18/Plantv3/: Plantv3.h
Arduino Libraries caa03Jul18/Plantv50/: Plantv50.cpp  ert_main.cpp  rtwtypes.h
Arduino Libraries caa03Jul18/test0/: ert_main.cpp  rtwtypes.h  test0.h
Arduino Libraries caa03Jul18/testintegrator0/: ert_main.cpp  rtwtypes.h  test_integrator0.h
EKF_ert_rtw/: CMakeLists.txt  EKF.cpp  EKF.h  EKF_data.cpp  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
EKF_ert_rtw/html/: traceInfo.mat
EKF_ert_rtw/html/data/: data.js  model.js  pages.js
EKF_ert_rtw/html/pages/: EKF_interface.html  EKF_replacements.html  EKF_subsystems.html  EKF_survey.html  EKF_trace.html  EKF_traceInfo.js
EKF_ert_rtw/tmwinternal/: tr
LEGACY/: acsv3.ino  starshot_sim.slx.autosave  starshotsimv5.slx  starshotsimv5.slxc
LEGACY/ACS Hardware Test/src/: main.cpp
LEGACY/ACS_Sim0/src/: main.cpp
LEGACY/MATLAB Files/: ArmenSamurkashianMEngReportOutline.docx  Controller.slx  MAE3260_livescript_W12F.mlx  PD_sketch_design.m  Plantv40.slx.autosave  Samurkashian_Armen_MEng18_Abstract_Form.docx  StarshotACS.slx  StarshotACS0.slx  StarshotAC_DC2d5discrete.slx  StarshotAC_DC2d8CLEANED_kane.slx.original  StarshotAC_DC_kd12.slx  StarshotAC_DC_kd12.slxc  starshot_DC_setup.m  starshot_IC_initv2.m  starshotsimv2.slx  starshotsimv3.slx  starshotsimv3p5.slx  starshotsimv3p6.slx  starshotsimv4.slx  starshotsimv4p2.slx  starshotsimv4p3lqr.slx  starshotsimv4p3lqrforautocode.slx  starshotsimv4p3lqrproto.slx  test.slx  ~$ring2018Reportnopics.docx
MATLAB Files/: Abstractform.docx  Controller0.slx  Fall2017Report.docx  Plantv5.slx  StarshotACS.slx.autosave  StarshotAC_DC2d6p7f.slx  StarshotAC_DC2d8CLEANED_kane.slx  StarshotAC_DC_kd13.slx  autocodetest.slx  collection_of_goodies.mdl  plotsim.m  starshot_DC_KD_setup.m  starshot_DC_KD_setupv2.m  starshotmath.m  starshotsimv4p1.slx  starshotsimv4p3.slx  starshotsimv4p3a.slx  starshotsimv4p3lqrforautocode.slx.original  starshotsimv5.slx  temp.m  test_integrator.slx.autosave  ~$ll2017Report.docx  ~$murkashian_Armen_MEng18_Abstract_Form.docx
MATLAB Files/Controller1_ert_rtw/: Controller1_manifest.txt  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  rtwtypeschksum.mat
MATLAB Files/Controller_ert_rtw/: Controller.h  Controller0.slx.autosave  defines.txt  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
MATLAB Files/Controller_grt_rtw/: Controller.c  Controller_private.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  modelsources.txt  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  rtwtypes.h
MATLAB Files/Controller_sfcn_rtw/: build_exception.mat
MATLAB Files/Plant_ert_rtw/: Plant.bat  Plant.mk  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  rtw_proj.tmw  rtwtypeschksum.mat
MATLAB Files/Plantv2_ert_rtw/: Plantv2.bat  Plantv2.mk  Plantv2_data.c  buildInfo.mat  codedescriptor.dmr
MATLAB Files/Plantv3_ert_rtw/: Plantv3.cpp  build_exception.mat  codedescriptor.dmr  ert_main.cpp  modelsources.txt  rtwtypeschksum.mat
MATLAB Files/Plantv41_ert_rtw/: Plantv41.cpp  codedescriptor.dmr  ert_main.cpp
MATLAB Files/Plantv50_ert_rtw/: Plantv50.h  build_exception.mat  codeInfo.mat  codedescriptor.dmr  ert_main.cpp  rtwtypeschksum.mat
MATLAB Files/StarshotACS0_ert_rtw/: StarshotACS0.cpp  build_exception.mat  codedescriptor.dmr  ert_main.cpp  rtwtypes.h
MATLAB Files/StarshotACS1_ert_rtw/: codedescriptor.dmr  ert_main.cpp  rtwtypes.h  rtwtypeschksum.mat
MATLAB Files/starshotsimv4p3lqr_ert_rtw/: build_exception.mat
MATLAB Files/starshotsimv4p3lqrproto_grt_rtw/: build_exception.mat  codeInfo.mat  multiword_types.h  rtGetInf.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  starshotsimv4p3lqrproto.c  starshotsimv4p3lqrproto.h  starshotsimv4p3lqrproto_data.c  starshotsimv4p3lqrproto_private.h
MATLAB Files/test0_ert_rtw/: build_exception.mat  ert_main.cpp  modelsources.txt  rtwtypes.h  test0.cpp
MATLAB Files/test_integrator0_ert_rtw/: build_exception.mat  codeInfo.mat  rtwtypeschksum.mat
Plant_ert_rtw/: CMakeLists.txt  Plant.cpp  Plant.h  Plant_data.cpp  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
Plant_ert_rtw/html/: traceInfo.mat
Plant_ert_rtw/html/data/: data.js  model.js  pages.js
Plant_ert_rtw/html/pages/: Plant_coderassumptions.html  Plant_interface.html  Plant_replacements.html  Plant_subsystems.html  Plant_survey.html  Plant_trace.html  Plant_traceInfo.js
Plant_ert_rtw/tmwinternal/: tr
StarshotACS_ert_rtw/: CMakeLists.txt  StarshotACS.cpp  StarshotACS.h  StarshotACS_data.cpp  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
StarshotACS_ert_rtw/html/: traceInfo.mat
StarshotACS_ert_rtw/html/data/: data.js  model.js  pages.js
StarshotACS_ert_rtw/html/pages/: StarshotACS_interface.html  StarshotACS_replacements.html  StarshotACS_subsystems.html  StarshotACS_survey.html  StarshotACS_trace.html  StarshotACS_traceInfo.js
StarshotACS_ert_rtw/tmwinternal/: tr
ekf/: ekf.h
slprj/_jitprj/: jitEngineAccessInfo.mat  s7Pe3NMwNZQvtzVnv4MpkHE.l  s7Pe3NMwNZQvtzVnv4MpkHE.mat  sD5amRfSNE9moe1kJMzYgLF.l  sD5amRfSNE9moe1kJMzYgLF.mat  sPZ7ftvOG2JsqwuXRiaZDIC.l  sPZ7ftvOG2JsqwuXRiaZDIC.mat  sulb00lhAyzL0kO9ZcyrBcD.l  sulb00lhAyzL0kO9ZcyrBcD.mat
slprj/_sfcncheck/: starshot_sim_report.htmx
(+352 files in other folders)
